# 0three-rec-poly

./: 0three-rec-poly.cabal  README.md
src/: Golf.hs  Golf2.hs  Lecture.hs
test/: Spec.hs
