name:                0three-rec-poly
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Levisoto/0three-rec-poly#readme
license:             BSD3
license-file:        LICENSE
author:              Levi Soto
maintainer:          levisoto.337@gmail.com
copyright:           2017 Levi Soto
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Golf
                     , Lecture
                     , Golf2
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable 0three-rec-poly-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , 0three-rec-poly
  default-language:    Haskell2010

test-suite 0three-rec-poly-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tasty
                     , tasty-hunit
                     , 0three-rec-poly
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Levisoto/0three-rec-poly
